# california-portugal-climate

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboards/streamlit/: app.py
data/mart/predictions/: baseline_rf_predictions.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/anomaly/: anomaly_city_correlations.sql  anomaly_city_events.sql  anomaly_city_lags.sql  anomaly_city_month.sql  climatology_city_month.sql  schema.yml
dbt/models/bronze/: bronze_daily_weather.sql  schema.yml
dbt/models/clean/: clean_daily_weather_features.sql  clean_monthly_climate.sql  schema.yml
dbt/models/gold/: climatology_city_month.sql  gold_city_anomaly_correlations.sql  gold_city_anomaly_events.sql  gold_city_anomaly_lags.sql  gold_city_month_anomalies.sql  gold_ml_features.sql  schema.yml
dbt/models/landing/: schema.yml
dbt/models/ml/: ml_features.sql
dbt/models/observability/: observability_sources.yml  pipeline_ml_daily_summary.sql  pipeline_ml_metrics.sql  pipeline_run_daily_summary.sql  pipeline_runs.sql  pipeline_runs.yml
dbt/models/silver/: schema.yml  silver_daily_weather_features.sql  silver_monthly_climate.sql
dbt/seeds/: dim_city.csv
models/: baseline_rf.pkl  baseline_rf_metrics.json
notebooks/: baseline_anomaly_model.ipynb  california_portugal_climate.ipynb  sanity_checks.ipynb
src/climate_pipeline/: dbt_cli.py
src/climate_pipeline/cli/: health.py
src/climate_pipeline/ingestion/: fetch_daily_weather.py  geocoding.py
src/climate_pipeline/ml/: predict.py  train.py
src/climate_pipeline/observability/: run_logger.py
src/climate_pipeline/orchestration/: pipeline.py  prefect_flow.py
src/climate_pipeline/utils/: get_paths.py  load_yaml_with_env.py  open_meteo_client.py
src/config/: cities.yaml  settings.yaml
tests/: conftest.py  test_anomaly_layer.py  test_clean_layer.py  test_gold_schema.py  test_landing_layer.py  test_ml_features.py  test_ml_training_smoke.py  test_observability_models.py  test_utils_paths.py  test_warehouse_basic.py
