[project]
name = "california-portugal-climate"
version = "0.1.0"
description = "Climate comparison pipeline between California and Portugal using Open-Meteo data, DuckDB, dbt, and Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.9"

# Core runtime dependencies (needed for ingestion + utils)
dependencies = [
    "requests",
    "pyyaml",
    "duckdb",
]

[project.optional-dependencies]
# Apps used only for local analysis/visualization
notebooks = [
    "pandas",
    "matplotlib",
    "jupyter",
]

[tool.uv]
# Required for editable installs
package = true

# Tell uv where your source code lives
sources = [{ path = "src" }]

[tool.uv.dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
fetch-geocodes = "climate_pipeline.ingestion.fetch_geocodes:main"
fetch-daily-weather = "climate_pipeline.ingestion.fetch_daily_weather:main"